# social-media-backend

./: .env  .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  update-image-registry.sh
.github/workflows/: ci.yml
account/: admin.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
backend/: settings.py  urls.py
core/: custom_auth.py  models.py  permissions.py  urls.py  validators.py
friend/: admin.py  models.py  serializers.py  urls.py  views.py
friend/migrations/: 0001_initial.py  0002_remove_friendrequest_status.py
message/: models.py  serializers.py  urls.py  views.py
message/migrations/: 0001_initial.py
notification/: models.py  serializers.py  services.py  urls.py  views.py
notification/migrations/: 0001_initial.py
post/: admin.py  models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
